Set up gruntfile for local, stage, and prod deploy

--- a/data/env/production.yml
+++ b/data/env/production.yml
@@ -1,2 +1,3 @@
 env: 'production'
-assets: 'http://nkwalton.brighamyounguniv.netdna-cdn.com'
+assets: 'http://nkwalton.brighamyounguniv.netdna-cdn.com/'
+iteration: 1
