--- a/data/env/stage.yml
+++ b/data/env/stage.yml
@@ -1,2 +1,3 @@
 env: 'stage'
-assets: 'http://nkwalton-stage.brighamyounguniv.netdna-cdn.com'
+assets: 'http://nkwalton-stage.brighamyounguniv.netdna-cdn.com/'
+iteration: 1
