--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
 #   - npm install
 #   - pip install --user pillow
 # install: gem install jekyll html-proofer
-# script: npm run travis
+script: bundle exec jekyll
 # env:
 #   global:
 #   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
